View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023985 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-05-23 09:40 | 2013-12-19 13:55 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0023985: There is no section between attached faces | ||||
Description | There is no section between attached faces | ||||
Steps To Reproduce | restore b1.brep b1 restore b2.brep b2 bsection r b1 b2 #no sections found | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(013) bug23985 | ||||
parent of | 0024016 | closed | Test case bugs moddata_2 bug324 works not correct after integration of the fix for the issue 0023985 |
2013-05-23 09:40 developer |
b1.brep (1,644 bytes) |
2013-05-23 09:41 developer |
b2.brep (1,366 bytes) |
|
Git branch CR23985 is ready to be reviewed ( http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commit;h=446362ef82c4d79545d2d7c22997d4bf7ed30217). |
|
No remarks |
|
Dear BugMaster, Branch CR23985 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 446362ef82c4d79545d2d7c22997d4bf7ed30217 Number of compiler warnings: occt component : Linux: 2 (2 on master) Windows: 11 (11 on master) products component : Linux: 0 (0 on master) Windows: 63 (63 on master) Regressions: No regressions Improvements: No improvements Testing cases: bugs modalg_5(013) bug23985 - OK. Testing on Linux: Total MEMORY difference: 366171028 / 365959288 Total CPU difference: 44791.78000000099 / 44990.3200000012 Testing on Windows: Total MEMORY difference: 404199780 / 402184244 Total CPU difference: 34943.671875 / 35390.3125 There are not differences in images found by testdiff. |
occt: master 04cbc9d3 2013-05-31 13:17:34
|
0023985: There is no section between attached faces. Added new parameter for checking whether the plane and cylinder are parallel - the height of the cylinder. This parameter is needed for the cases when angle between AXIS and plane's normal is very close to PI, but the "height" is big enough that point, translated from intersection point between cylinder's axis and plane on the "height" distance in the direction of cylinder's axis, does not belong to the plane. Such plane and cylinder cannot be considered as parallel. Add test case for this fix |
Affected Issues 0023985 |
|
mod - src/IntAna/IntAna_IntConicQuad.cdl | Diff File | ||
mod - src/IntAna/IntAna_IntConicQuad.cxx | Diff File | ||
mod - src/IntAna/IntAna_QuadQuadGeo.cdl | Diff File | ||
mod - src/IntAna/IntAna_QuadQuadGeo.cxx | Diff File | ||
mod - src/IntPatch/IntPatch_ImpImpIntersection_1.gxx | Diff File | ||
mod - src/IntPatch/IntPatch_ImpImpIntersection_2.gxx | Diff File | ||
mod - src/IntPatch/IntPatch_ImpImpIntersection_3.gxx | Diff File | ||
add - tests/bugs/modalg_5/bug23985 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-05-23 09:40 |
|
New Issue | |
2013-05-23 09:40 |
|
Assigned To | => emv |
2013-05-23 09:40 |
|
File Added: b1.brep | |
2013-05-23 09:41 |
|
File Added: b2.brep | |
2013-05-23 09:41 |
|
Status | new => assigned |
2013-05-28 15:32 |
|
Note Added: 0024536 | |
2013-05-28 15:32 |
|
Assigned To | emv => pkv |
2013-05-28 15:32 |
|
Status | assigned => resolved |
2013-05-29 06:17 |
|
Note Added: 0024537 | |
2013-05-29 06:17 |
|
Status | resolved => reviewed |
2013-05-29 06:17 |
|
Assigned To | pkv => mkv |
2013-05-31 16:31 |
|
Note Added: 0024586 | |
2013-05-31 16:32 |
|
Test case number | => bugs modalg_5(013) bug23985 |
2013-05-31 16:32 |
|
Assigned To | mkv => bugmaster |
2013-05-31 16:32 |
|
Status | reviewed => tested |
2013-05-31 16:46 | bugmaster | Target Version | => 6.7.0 |
2013-06-03 14:48 |
|
Changeset attached | => occt master 04cbc9d3 |
2013-06-03 14:48 |
|
Assigned To | bugmaster => emv |
2013-06-03 14:48 |
|
Status | tested => verified |
2013-06-03 14:48 |
|
Resolution | open => fixed |
2013-06-06 09:05 |
|
Relationship added | parent of 0024016 |
2013-12-19 13:53 | bugmaster | Status | verified => closed |
2013-12-19 13:55 | bugmaster | Fixed in Version | => 6.7.0 |