0023985: There is no section between attached faces. Added new parameter for checking whether the plane and cylinder are parallel - the height of the cylinder. This parameter is needed for the cases when angle between AXIS and plane's normal is very close to PI, but the "height" is big enough that point, translated from intersection point between cylinder's axis and plane on the "height" distance in the direction of cylinder's axis, does not belong to the plane. Such plane and cylinder cannot be considered as parallel. Add test case for this fix